# octo-curer

./: CONFIGURATION_DEMO.md  Cargo.toml  LICENSE  PROJECT_STATUS.md  README.md  WARP.md  flash_uf2.sh  uv-curing-controller.uf2  uv-resin-curing-5min.uf2  uv-resin-curing.uf2
.cargo/: config.toml
src/: config.rs  debug_test.rs  main.rs  multi_duration_example.rs  relay_manual_test.rs  relay_test.rs
